--- a/main.html
+++ b/main.html
@@ -21,10 +21,29 @@
           </div>
           <div class="media-icons">
             <!-- your code here -->
+			  <a href="#" target="_blank"><i class="fa fa-facebook"></i></a>
+            <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
+            <a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+            <a href="#" target="_blank"><i class="fa fa-instagram"></i></a>
+            <a href="#" target="_blank"><i class="fa fa-youtube"></i></a>
           </div>
         </div>
         <div class="link-boxes">
           <!-- your code here -->
+			<div>
+				<h1>Links</h1>
+			</div>
+			<div>
+				<h1>Services</h1>
+			</div>
+			<div>
+				<h1>Other services</h1>
+			</div>
+			<div>
+				<h1>Contact</h1>
+			</div>
+			
+			
         </div>
       </div>
       <div class="bottom-details">
