--- a/main.html
+++ b/main.html
@@ -22,25 +22,40 @@
           <div class="media-icons">
             <!-- your code here -->
 			  <a href="#" target="_blank"><i class="fa fa-facebook"></i></a>
-            <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
-            <a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
-            <a href="#" target="_blank"><i class="fa fa-instagram"></i></a>
-            <a href="#" target="_blank"><i class="fa fa-youtube"></i></a>
+              <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
+              <a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+              <a href="#" target="_blank"><i class="fa fa-instagram"></i></a>
+              <a href="#" target="_blank"><i class="fa fa-youtube"></i></a>
           </div>
         </div>
         <div class="link-boxes">
           <!-- your code here -->
-			<div>
+			<div class="links">
 				<h1>Links</h1>
+                <a href="#">Home</a>
+                <a href="#">Contact</a>
+                <a href="#">About Us</a>
+                <a href="#">Get Started</a>
 			</div>
-			<div>
-				<h1>Services</h1>
+			<div class="links">
+				<h1>Services</h1>    
+                <a href="#">App Design</a>
+                <a href="#">Web Design</a>
+                <a href="#">Logo Design</a>
+                <a href="#">Banner Design</a>
 			</div>
-			<div>
-				<h1>Other services</h1>
+			<div class="links">
+                <h1>Other services</h1>
+                <a href="#">SEO</a>
+                <a href="#">Content Marketing</a>
+                <a href="#">Prints</a>
+                <a href="#">Social Media</a>
 			</div>
 			<div>
 				<h1>Contact</h1>
+                <p>+91 8879887262</p>
+                <p>+91 8879887262</p>
+                <p>contact@company.com</p>
 			</div>
 			
 			
